updated image file

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Gaurav Gupta </p>
-logo: /assets/img/Saved Image Gaurav.png
+logo: /assets/Saved Image Gaurav.png
 
 description:
   <p align="center">
